tdf#168921 sw: don't export user fields with empty names to DOCX

Otherwise Word will complain.

Started from ae5f469d3893de73850ccc369dbf426a4acd8f15.

Change-Id: I223bcea33645e02972bc189eef0b913fc19b3b48
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192583
Reviewed-by: Aron Budea <aron.budea@collabora.com>
Tested-by: Jenkins
(cherry picked from commit bd01fe073f0ef0eae54f6e9a6d4ecce68171d1c9)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192691
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>
(cherry picked from commit 2c0f2c55ab43f39e54e8df9164665dd7544d8658)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193776
Tested-by: Thorsten Behrens <thorsten.behrens@collabora.com>
Reviewed-by: Thorsten Behrens <thorsten.behrens@collabora.com>